--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "react-scripts-ts start",
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
-    "eject": "react-scripts-ts eject"
+    "eject": "npm run remove:www && react-scripts-ts eject"
   },
   "devDependencies": {
     "@types/jest": "^24.0.14",
@@ -20,6 +20,8 @@
     "@types/react": "^16.8.20",
     "@types/react-dom": "^16.8.4",
     "@types/react-router-dom": "^4.3.4",
+    "axios": "^0.19.0",
+    "npm": "^6.10.0",
     "typescript": "^3.5.2"
   }
 }
